--- a/authenticated/myapp/templates/pages/pages-login.html
+++ b/authenticated/myapp/templates/pages/pages-login.html
@@ -22,21 +22,21 @@
 
     <!-- Vendor CSS Files -->
     <link
-      href="{% static "assets/vendor/bootstrap/css/bootstrap.min.css"%}"
+      href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css'%}"
       rel="stylesheet"
     />
     <link
-      href="{% static "assets/vendor/bootstrap-icons/bootstrap-icons.css"%}"
+      href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css'%}"
       rel="stylesheet"
     />
-    <link href="{% static "assets/vendor/boxicons/css/boxicons.min.css"%}" rel="stylesheet" />
-    <link href="{% static "assets/vendor/quill/quill.snow.css"%}" rel="stylesheet" />
-    <link href="{% static "assets/vendor/quill/quill.bubble.css"%}"rel="stylesheet" />
-    <link href="{% static "assets/vendor/remixicon/remixicon.css"%}" rel="stylesheet" />
-    <link href="{% static "assets/vendor/simple-datatables/style.css"%}" rel="stylesheet" />
+    <link href="{% static 'assets/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/vendor/quill/quill.snow.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/vendor/quill/quill.bubble.css' %}"rel="stylesheet" />
+    <link href="{% static 'assets/vendor/remixicon/remixicon.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/vendor/simple-datatables/style.css' %}" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="{% static "assets/css/style.css"%}" rel="stylesheet" />
+    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet" />
 
     <!-- =======================================================
   * Template Name: NiceAdmin
@@ -99,7 +99,7 @@
                       <button class="btn btn-primary w-100" type="submit">Login</button>
                     </div>
                     <div class="col-12">
-                      <p class="small mb-0">Don't have account? <a href="{% url "register_page" %}">Create an account</a></p>
+                      <p class="small mb-0">Don't have account? <a href="{% url 'register_page' %}">Create an account</a></p>
                     </div>
                   </form>
 
@@ -121,7 +121,7 @@
       </section>
 
     </div>
-  </main><!-- End #main -->
+</main><!-- End #main -->
      
 
     <a
@@ -131,17 +131,17 @@
     ></a>
 
     <!-- Vendor JS Files -->
-    <script src="{% static "assets/vendor/apexcharts/apexcharts.min.js"%}"></script>
-    <script src="{% static "assets/vendor/bootstrap/js/bootstrap.bundle.min.js"%}"></script>
-    <script src="{% static "assets/vendor/chart.js/chart.umd.js"%}"></script>
-    <script src="{% static "assets/vendor/echarts/echarts.min.js"%}"></script>
-    <script src="{% static "assets/vendor/quill/quill.js"%}"></script>
-    <script src="{% static "assets/vendor/simple-datatables/simple-datatables.js"%}"></script>
-    <script src="{% static "assets/vendor/tinymce/tinymce.min.js"%}"></script>
-    <script src="{% static "assets/vendor/php-email-form/validate.js"%}"></script>
+    <script src="{% static 'assets/vendor/apexcharts/apexcharts.min.js' %}"></script>
+    <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'assets/vendor/chart.js/chart.umd.js' %}"></script>
+    <script src="{% static 'assets/vendor/echarts/echarts.min.js' %}"></script>
+    <script src="{% static 'assets/vendor/quill/quill.js'%}"></script>
+    <script src="{% static 'assets/vendor/simple-datatables/simple-datatables.js'%}"></script>
+    <script src="{% static 'assets/vendor/tinymce/tinymce.min.js'%}"></script>
+    <script src="{% static 'assets/vendor/php-email-form/validate.js'%}"></script>
 
     <!-- Template Main JS File -->
-    <script src="{% static "assets/js/main.js"%}"></script>
+    <script src="{% static 'assets/js/main.js'%}"></script>
   </body>
 </html>
 
