--- a/authenticated/myapp/templates/layout/index.html
+++ b/authenticated/myapp/templates/layout/index.html
@@ -35,19 +35,19 @@
                       <b>N</b>ame
                     </th>
                     <th>Email</th>
-                    <th>Password</th>
+                    
                     
                   </tr>
                 </thead>
                 <tbody>
                   
                   <tr>
-                    <td>Unity Pugh</td>
-                    <td>9958</td>
-                    <td>9958</td>
-                    
+                    <td>{{ user.username }}</td>
+                    <td>{{ user.email }}</td>
+                   
                   </tr>
                   
+                    
                  
                 </tbody>
               </table>
