--- a/authenticated/myapp/templates/partials/sidebar.html
+++ b/authenticated/myapp/templates/partials/sidebar.html
@@ -27,7 +27,7 @@
       
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-contact.html">
+        <a class="nav-link collapsed" href="{% url 'contact_page' %}">
           <i class="bi bi-envelope"></i>
           <span>Contact</span>
         </a>
