--- a/authenticated/myapp/templates/partials/master.html
+++ b/authenticated/myapp/templates/partials/master.html
@@ -72,16 +72,16 @@
     ></a>
 
     <!-- Vendor JS Files -->
-    <script src="{% static "assets/vendor/apexcharts/apexcharts.min.js"%}"></script>
-    <script src="{% static "assets/vendor/bootstrap/js/bootstrap.bundle.min.js"%}"></script>
-    <script src="{% static "assets/vendor/chart.js/chart.umd.js"%}"></script>
-    <script src="{% static "assets/vendor/echarts/echarts.min.js"%}"></script>
-    <script src="{% static "assets/vendor/quill/quill.js"%}"></script>
-    <script src="{% static "assets/vendor/simple-datatables/simple-datatables.js"%}"></script>
-    <script src="{% static "assets/vendor/tinymce/tinymce.min.js"%}"></script>
-    <script src="{% static "assets/vendor/php-email-form/validate.js"%}"></script>
+    <script src="{% static 'assets/vendor/apexcharts/apexcharts.min.js'%}"></script>
+    <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
+    <script src="{% static 'assets/vendor/chart.js/chart.umd.js'%}"></script>
+    <script src="{% static 'assets/vendor/echarts/echarts.min.js'%}"></script>
+    <script src="{% static 'assets/vendor/quill/quill.js'%}"></script>
+    <script src="{% static 'assets/vendor/simple-datatables/simple-datatables.js'%}"></script>
+    <script src="{% static 'assets/vendor/tinymce/tinymce.min.js'%}"></script>
+    <script src="{% static 'assets/vendor/php-email-form/validate.js'%}"></script>
 
     <!-- Template Main JS File -->
-    <script src="{% static "assets/js/main.js"%}"></script>
+    <script src="{% static 'assets/js/main.js'%}"></script>
   </body>
 </html>
